# rust_echo

./: Cargo.toml  README.md  mk-outs.sh
src/: main.rs
tests/: cli.rs
