[package]
name = "rust_echo"
version = "0.1.0"
edition = "2021"
authors = ["Michael Huang <michaelh@casual.place>"]
description = "Rust echo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.4"
clap = { version = "4.0.15", features = ["derive"] }
predicates = "2.1.1"
